# arena-allocator

./: .gitignore  CMakeLists.txt  README.md  main  main.c  makefile
include/: arena_alloc.h
src/: arena_alloc.c
